--- a/deploy/helm/magda-core/charts/apidocs-server/templates/deployment.yaml
+++ b/deploy/helm/magda-core/charts/apidocs-server/templates/deployment.yaml
@@ -4,6 +4,9 @@ metadata:
   name: apidocs-server
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      service: apidocs-server
   template:
     metadata:
       labels:
