--- a/deploy/helm/magda-core/charts/elasticsearch/templates/kibana-deployment.yml
+++ b/deploy/helm/magda-core/charts/elasticsearch/templates/kibana-deployment.yml
@@ -4,6 +4,9 @@ metadata:
   name: kibana
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      service: kibana
   template:
     metadata:
       labels:
