--- a/deploy/helm/magda-core/charts/search-api/templates/deployment.yaml
+++ b/deploy/helm/magda-core/charts/search-api/templates/deployment.yaml
@@ -7,6 +7,9 @@ spec:
   strategy:
     rollingUpdate:
       maxUnavailable: {{ .Values.global.rollingUpdate.maxUnavailable | default 0 }}
+  selector:
+    matchLabels:
+      service: search-api
   template:
     metadata:
       labels:
