--- a/deploy/helm/magda-core/charts/storage-api/templates/deployment.yaml
+++ b/deploy/helm/magda-core/charts/storage-api/templates/deployment.yaml
@@ -8,6 +8,9 @@ spec:
     type: RollingUpdate
     rollingUpdate:
       maxUnavailable: {{ .Values.global.rollingUpdate.maxUnavailable | default 0 }}
+  selector:
+    matchLabels:
+      service: storage-api
   template:
     metadata:
       labels:
