--- a/deploy/helm/magda-core/charts/web-server/templates/deployment.yaml
+++ b/deploy/helm/magda-core/charts/web-server/templates/deployment.yaml
@@ -7,6 +7,9 @@ spec:
     rollingUpdate:
       maxUnavailable: {{ .Values.global.rollingUpdate.maxUnavailable | default 0 }}
   replicas: 1
+  selector:
+    matchLabels:
+      service: web
   template:
     metadata:
       labels:
