--- a/deploy/helm/magda-nginx-ingress-controller/charts/default-http-backend/templates/deployment.yaml
+++ b/deploy/helm/magda-nginx-ingress-controller/charts/default-http-backend/templates/deployment.yaml
@@ -4,6 +4,9 @@ metadata:
   name: default-http-backend
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      service: default-http-backend
   template:
     metadata:
       labels:
