--- a/magda-registry-api/src/main/resources/application.conf
+++ b/magda-registry-api/src/main/resources/application.conf
@@ -82,3 +82,14 @@ opa {
 
 # whether validate received aspect data against aspect json schema
 validateJsonSchema = true
+
+scalikejdbc{
+    global {
+        loggingSQLAndTime.enabled = false
+        loggingSQLAndTime.singleLineMode = true
+        loggingSQLAndTime.logLevel = DEBUG
+        loggingSQLAndTime.warningEnabled = true
+        loggingSQLAndTime.warningThresholdMillis = 5000
+        loggingSQLAndTime.warningLogLevel = warn
+    }
+}
