- Add CustomValidator Support to existing HOC & Editors - Add ValidtionManager support to radio box editor

--- a/deploy/helm/magda-core/charts/web-server/values.yaml
+++ b/deploy/helm/magda-core/charts/web-server/values.yaml
@@ -40,6 +40,7 @@ mandatoryFields:
   - dataset.defaultLicense
   - informationSecurity.classification
   - informationSecurity.disseminationLimits
+  - publishToDga
 dateConfig:
   dateFormats:
     - YYYY
