--- a/deploy/helm/magda-dev.yml
+++ b/deploy/helm/magda-dev.yml
@@ -114,6 +114,7 @@ magda-core:
     showNotificationBanner: false
     featureFlags:
       cataloguing: true
+      publishToDga: true
     vocabularyApiEndpoints:
       - "https://vocabs.ands.org.au/repository/api/lda/abares/australian-land-use-and-management-classification/version-8/concept.json"
       - "https://vocabs.ands.org.au/repository/api/lda/neii/australian-landscape-water-balance/version-1/concept.json"
