--- a/deploy/helm/minikube-dev.yml
+++ b/deploy/helm/minikube-dev.yml
@@ -44,6 +44,7 @@ magda-core:
     showNotificationBanner: false
     featureFlags:
       cataloguing: true
+      publishToDga: true
     dateConfig:
       dateFormats:
         - YYYY
