--- a/deploy/helm/preview.yml
+++ b/deploy/helm/preview.yml
@@ -98,6 +98,7 @@ magda-core:
     fallbackUrl: "https://data.gov.au"
     featureFlags:
       cataloguing: true
+      publishToDga: true
     vocabularyApiEndpoints:
       - "https://vocabs.ands.org.au/repository/api/lda/abares/australian-land-use-and-management-classification/version-8/concept.json"
       - "https://vocabs.ands.org.au/repository/api/lda/neii/australian-landscape-water-balance/version-1/concept.json"
