Added tests for authorising the records (plural) endpoint

--- a/magda-registry-api/src/main/resources/application.conf
+++ b/magda-registry-api/src/main/resources/application.conf
@@ -87,7 +87,7 @@ scalikejdbc{
     global {
         loggingSQLAndTime.enabled = false
         loggingSQLAndTime.singleLineMode = true
-        loggingSQLAndTime.logLevel = DEBUG
+        loggingSQLAndTime.logLevel = INFO
         loggingSQLAndTime.warningEnabled = true
         loggingSQLAndTime.warningThresholdMillis = 5000
         loggingSQLAndTime.warningLogLevel = warn
