Run the Update scripts job as a preview

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -627,24 +627,7 @@ inttest:registryAuth:
     - helm upgrade $CI_COMMIT_REF_SLUG deploy/helm/magda --install --recreate-pods --namespace $CI_COMMIT_REF_SLUG -f deploy/helm/preview-multi-tenant.yml --set global.image.repository=registry.gitlab.com/magda-data/magda/data61,global.image.tag=$CI_COMMIT_REF_SLUG,magda-core.ingress.hostname=$CI_COMMIT_REF_SLUG.dev.magda.io,magda-core.combined-db.waleBackup.method=NONE,magda-core.elasticsearch.useGcsSnapshots=false,global.externalUrl=https://$CI_COMMIT_REF_SLUG.dev.magda.io,global.magdaAdminPortalName=admin-$CI_COMMIT_REF_SLUG.dev.magda.io,global.namespace=$CI_COMMIT_REF_SLUG --timeout 3600 --wait
     - echo "Successfully deployed to https://${CI_COMMIT_REF_SLUG}.dev.magda.io"
 Update scripts:
-  # stage: preview
-  when: manual
-  # only:
-  #   - branches
-  # except:
-  #   - master
-  #   - /^v.*RC.*$/
-  # dependencies:
-  #   - buildtest:helm-charts
-  # cache:
-  #   paths: []
-  # image:
-  #   name: dtzar/helm-kubectl:2.16.1
-  # retry: 1
-  # environment:
-  #   name: preview/$CI_COMMIT_REF_NAME
-  #   url: https://$CI_COMMIT_REF_SLUG.dev.magda.io
-  #   on_stop: Stop Preview
+  <<: *runAsPreview
   before_script:
     - yarn global add pkg
   script:
