--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -633,16 +633,17 @@ Update scripts:
   before_script:
     - yarn global add pkg
   script:
+    - pwd
     - cd scripts/.
     - pkg create-secrets/index.js --out-path create-secrets/build
     - ls create-secrets/build
     - echo "Successfully compiled bins"
-    - cd /home
+    - cd ../../
     - git clone https://github.com/magda-io/magda-config.git
+    - cp magda/scripts/create-secrets/build/index-linux magda-config/create-secrets/index-linux
+    - cp magda/scripts/create-secrets/build/index-macos magda-config/create-secrets/index-macos
+    - cp magda/scripts/create-secrets/build/index-win.exe magda-config/create-secrets/index-win.exe
     - cd magda-config
-    - cp /home/magda/scripts/create-secrets/build/index-linux /home/magda-config/create-secrets/index-linux
-    - cp /home/magda/scripts/create-secrets/build/index-macos /home/magda-config/create-secrets/index-macos
-    - cp /home/magda/scripts/create-secrets/build/index-win.exe /home/magda-config/create-secrets/index-win.exe
     - cd create-secrets
     - git add index-linux index-macos index-win.exe
     - git config --global user.email "magdabot@magda.io"
