Stop helm init-ing

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -392,7 +392,7 @@ buildtest:helm-charts:
     paths: []
   script:
     # Init helm
-    - helm init --client-only
+    # - helm init --client-only
     - helm repo add magda-io https://charts.magda.io
     - helm dep build deploy/helm/magda
 
